--- a/Variety/install
+++ b/Variety/install
@@ -1,6 +1,5 @@
-#sudo add-apt-repository ppa:peterlevi/ppa
-#sudo apt-get update
-#sudo apt-get install variety
+sudo add-apt-repository ppa:peterlevi/ppa
+sudo apt-get install variety
 cd Variety
 ./change_wallpaper
 cd ..
