--- a/other/install
+++ b/other/install
@@ -1,6 +1,6 @@
 sudo apt-get install vim
 sudo apt-get install terminator
 sudo apt-get install gnuplot
-sudo aptget install g++
-sudo aptget install gcc
-sudo aptget install python3
+sudo apt-get install g++
+sudo apt-get install gcc
+sudo apt-get install python3
