--- a/install
+++ b/install
@@ -3,7 +3,7 @@ sudo apt-get install bind9
 
 dir=.
 for f in "$dir"/*; do
-	if [ -d "$f" ]; then
+	if [ -d "$f" ]; then    #check if $f is a directory
  		./$f/install
  	fi
 done
