rename variety and change java to apt-get default-jdk

--- a/git/install
+++ b/git/install
@@ -3,7 +3,6 @@ sudo apt-get install git
 cd git/
 ls -al
 ./git_config
-./download_java
-./install_java jdk-8u25-linux-x64.tar.gz
+sudo apt-get install default-jdk
 ./install_smartgit
 cd ..
